--- a/operator/dpd-operator/config/crd/bases/pod.dp.io_deepblues.yaml
+++ b/operator/dpd-operator/config/crd/bases/pod.dp.io_deepblues.yaml
@@ -42,17 +42,23 @@ spec:
                 description: Foo is an example field of DeepBlue. Edit deepblue_types.go
                   to remove/update
                 type: string
+              labelmap:
+                additionalProperties:
+                  type: string
+                type: object
               name:
                 type: string
             type: object
           status:
             description: DeepBlueStatus defines the observed state of DeepBlue
             properties:
-              status:
+              labelstatus:
+                additionalProperties:
+                  type: string
                 description: 'INSERT ADDITIONAL STATUS FIELD - define observed state
                   of cluster Important: Run "make" to regenerate code after modifying
                   this file'
-                type: string
+                type: object
             type: object
         type: object
     served: true
